fix thumbnail slider and duration alignment

--- a/src/_tags.scss
+++ b/src/_tags.scss
@@ -180,6 +180,7 @@ textarea{
         right: 0px;
         top: 0px;
         width: 34px;
+        height: 34px;
         text-align: center;
         pointer-events:none;
         background-color:transparent;
